<resources>
    <string name="app_name">Anikiwi</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_ratings">Ratings</string>
    <string name="title_anime">Anime</string>
    <string name="title_profile">Profile</string>
    <string name="no_result_found">NO RESULT FOUND</string>
    <string name="retry">Retry</string>
    <string name="logout">Logout</string>
    <string name="search">Search</string>
    <string name="anikiwi">Anikiwi</string>
    <string name="nombre">Nombre</string>
    <string name="name">Name</string>
    <string name="year">Year</string>
    <string name="title">Title</string>
    <string name="type">Type</string>
    <string name="status">Status</string>
    <string name="season">Season</string>
    <string name="filters">Filters</string>
    <string name="rate_anime">Rate Anime</string>
    <string name="enter_date">Enter date</string>
    <string name="category">Category</string>
    <string name="Watching">Watching</string>
    <string name="Completed">Completed</string>
    <string name="Planning">Planning</string>
    <string name="Dropped">Dropped</string>
    <string name="anime_image">Anime Image</string>
    <string name="settings">Settings</string>
    <string name="touch_to_expand_the_tags">Touch to expand the tags</string>
    <string name="ScoreMiddle"><![CDATA[<= X <=]]></string>
    <string-array name="seasons_array">
        <item />
        <item>SPRING</item>
        <item>SUMMER</item>
        <item>WINTER</item>
        <item>FALL</item>
    </string-array>
    <string-array name="types_array">
        <item />
        <item>TV</item>
        <item>MOVIE</item>
        <item>OVA</item>
        <item>ONA</item>
        <item>SPECIAL</item>
        <item>UNKNOWN</item>
    </string-array>
    <string-array name="status_array">
        <item />
        <item>FINISHED</item>
        <item>ONGOING</item>
        <item>UPCOMING</item>
        <item>UNKNOWN</item>
    </string-array>
    <string-array name="rate_status_array">
        <item>Watching</item>
        <item>Completed</item>
        <item>Planning</item>
        <item>Dropped</item>
    </string-array>
</resources>