<?xml version="1.0" encoding="utf-8"?>
<!-- dialog_layout.xml -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filters"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/purple_200"
        android:padding="10dp"
        android:gravity="center_horizontal" />

    <EditText
        android:id="@+id/editTextTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title"
        android:padding="10dp"
        android:inputType="text"
        android:autofillHints="Titles" />

    <EditText
        android:id="@+id/editTextYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/year"
        android:padding="10dp"
        android:inputType="number"
        android:autofillHints="Years"/>

    <!-- space -->
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewSeason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Season:"
            android:layout_alignBaseline="@+id/spinnerSeason"
            android:textSize="18sp"
            android:paddingEnd="8dp"
            android:paddingStart="10dp" />

        <Spinner
            android:id="@+id/spinnerSeason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="134dp" />

    </RelativeLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Type:"
            android:layout_alignBaseline="@+id/spinnerType"
            android:textSize="18sp"
            android:paddingEnd="8dp"
            android:paddingStart="10dp" />

        <Spinner
            android:id="@+id/spinnerType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="134dp"
            android:outlineSpotShadowColor="@color/purple_500"/>

    </RelativeLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Status:"
            android:layout_alignBaseline="@+id/spinnerStatus"
            android:textSize="18sp"
            android:paddingEnd="8dp"
            android:paddingStart="10dp" />

        <Spinner
            android:id="@+id/spinnerStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="134dp" />
    </RelativeLayout>

</LinearLayout>
