<?xml version="1.0" encoding="utf-8"?>
<!-- dialog_layout.xml -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filters"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="?colorPrimary"
        android:padding="10dp"
        android:gravity="center_horizontal" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textViewScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?colorOnSurfaceVariant"
            android:text="Score:"
            android:textSize="18sp"
            android:paddingEnd="8dp"
            android:paddingStart="10dp"
            android:layout_alignBaseline="@id/editTextMinScore"
            android:layout_alignTop="@id/editTextMinScore"/>

        <EditText
            android:id="@+id/editTextMinScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?colorPrimary"
            android:hint="0"
            android:padding="10dp"
            android:inputType="number"
            android:autofillHints="Score"
            android:layout_toEndOf="@id/textViewScore" />

        <TextView
            android:id="@+id/textViewScoreMiddle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?colorOnSurfaceVariant"
            android:text="@string/ScoreMiddle"
            android:textSize="18sp"
            android:paddingEnd="8dp"
            android:paddingStart="10dp"
            android:layout_alignBaseline="@id/editTextMinScore"
            android:layout_alignTop="@id/editTextMinScore"
            android:layout_toEndOf="@id/editTextMinScore"/>

        <EditText
            android:id="@+id/editTextMaxScore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?colorPrimary"
            android:hint="10"
            android:padding="10dp"
            android:inputType="number"
            android:autofillHints="Score"
            android:layout_toEndOf="@id/textViewScoreMiddle" />

    </RelativeLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Add Starting Day -->
        <TextView
            android:id="@+id/textViewMinDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?colorOnSurfaceVariant"
            android:text="Min Date:"
            android:textSize="18sp"
            android:paddingEnd="8dp"
            android:paddingStart="10dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/editTextMinDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?colorPrimary"
            android:layout_alignBaseline="@id/textViewMinDate"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="23dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="30dp"
            android:layout_toEndOf="@id/textViewMinDate"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/enter_date"/>

    </RelativeLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Add Starting Day -->
        <TextView
            android:id="@+id/textViewMaxDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?colorOnSurfaceVariant"
            android:text="Max Date:"
            android:textSize="18sp"
            android:paddingEnd="8dp"
            android:paddingStart="10dp"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/editTextMaxDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?colorPrimary"
            android:layout_alignBaseline="@id/textViewMaxDate"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="18dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="30dp"
            android:layout_toEndOf="@id/textViewMaxDate"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/enter_date"/>

    </RelativeLayout>

    <Button
        android:id="@+id/buttonClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Clear"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"

        >

    </Button>



</LinearLayout>
